--- a/NewsRoom/appsettings.json
+++ b/NewsRoom/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-NewsRoom-3FB38B35-F807-4DC6-B40E-44DD3DA7B4F5;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-SB9MJ7T\\SQLEXPRESS;Database=NewsRoom;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
