added classes in .Test Project to make mockingTests

--- a/NewsRoom.Test/NewsRoom.Test.csproj
+++ b/NewsRoom.Test/NewsRoom.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -22,10 +22,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NewsRoom\NewsRoom.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Mocks\" />
   </ItemGroup>
 
 </Project>
