--- a/NewsRoom.Test/NewsRoom.Test.csproj
+++ b/NewsRoom.Test/NewsRoom.Test.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\NewsRoom\NewsRoom.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mochs\" />
+  </ItemGroup>
+
 </Project>
