make more folders in Test project for a nice reading and testing

--- a/NewsRoom.Test/NewsRoom.Test.csproj
+++ b/NewsRoom.Test/NewsRoom.Test.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\NewsRoom\NewsRoom.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Routing\" />
+  </ItemGroup>
+
 </Project>
