--- a/NewsRoom/appsettings.json
+++ b/NewsRoom/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SQL8001.site4now.net;Initial Catalog=db_a928e2_newsroom;User Id=db_a928e2_newsroom_admin;Password=GoodLuck07"
+    "DefaultConnection": "Data Source=SQL8001.site4now.net;Initial Catalog=db_a928e2_newsroom;User Id=db_a928e2_newsroom_admin;Password=***"
   },
   "ConnectionStringsOrg": {
     "DefaultConnectionOrg": "Server=DESKTOP-SB9MJ7T\\SQLEXPRESS;Database=NewsRoom;Trusted_Connection=True;MultipleActiveResultSets=true"
