change ConnectionString to can use own Database

--- a/NewsRoom/appsettings.json
+++ b/NewsRoom/appsettings.json
@@ -1,10 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SQL6030.site4now.net;Initial Catalog=db_a96603_tihomirgeorgiev5;User Id=db_a96603_tihomirgeorgiev5_admin;Password=GoodLuck07"
+    "DefaultConnection": "Server=DESKTOP-SB9MJ7T\\SQLEXPRESS;Database=NewsRoom;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "ConnectionStringsOrg": {
-    "DefaultConnectionOrg": "Server=DESKTOP-SB9MJ7T\\SQLEXPRESS;Database=NewsRoom;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -14,3 +12,4 @@
   },
   "AllowedHosts": "*"
 }
+ 
