--- a/NewsRoom/NewsRoom.csproj
+++ b/NewsRoom/NewsRoom.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Google.Cloud.Diagnostics.AspNetCore3" Version="5.1.0" />
     <PackageReference Include="Google.Cloud.Diagnostics.Common" Version="5.1.0" />
     <PackageReference Include="LazZiya.TagHelpers" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.17" />
